@startuml

title __REPORT's Class Diagram__\n

  namespace wasteless.server {
    namespace export.report {
      class wasteless.server.export.report.JsonReport {
          + JsonReport()
          + dumpReport()
          + getReportColor()
          + setReportColor()
      }

       interface wasteless.server.export.report.Report {
                {abstract} + dumpReport()
                {abstract} + setReportColor()
        }
       enum wasteless.server.export.report.ReportType {
               JSON_REPORT
               TEXT_REPORT
         }

       class wasteless.server.export.report.TextReport {
                 + TextReport()
                 + dumpReport()
                 + getReportColor()
                 + setReportColor()
                 - writeToFile()
             }
    }
  }
  

  

  wasteless.server.export.report.JsonReport .up.|> wasteless.server.export.report.Report
  wasteless.server.export.report.JsonReport o-- wasteless.server.export.decorator.ReportColor : reportColor
  wasteless.server.export.report.TextReport .up.|> wasteless.server.export.report.Report
  wasteless.server.export.report.TextReport o-- wasteless.server.export.decorator.ReportColor : reportColor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
